# Richwell-Portal-Vibe-3

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATOMIC_COMPONENTS.md  COMPONENT_EXTENSIONS.md  COMPONENT_INTEGRATION_GUIDE.md  COMPONENT_SUMMARY.md  DEVELOPMENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPONENTS.md  PHASE3_COMPONENTS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TODO.md  db.sqlite3  docker-compose.yml  fix_templates.py  requirements.txt  simplify_atoms.py
.claude/: settings.local.json
archive/: apps.py
audit/: models.py
backend/: Dockerfile  README.md  pyproject.toml
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/core/: views.py
backend/core/tests/: __init__.py  test_views.py
backend/healthz/: __init__.py  apps.py  urls.py  views.py
backend/healthz/tests/: test_healthz.py
backend/static/css/: base.css
backend/templates/: base.html
backend/templates/pages/: home.html
config/: settings.py  urls.py
core/: mixins.py  models.py  role_demo.py
courses/: models.py  urls.py  views.py
documentation/: concept.md  note.md  phase.md  schema.md  todo.md
frontend/: README.md  index.html  package.json
rci/: manage.py
richwell/: manage.py
sections/: admin.py  models.py  serializers.py  urls.py  views.py
subjects/: models.py  serializers.py  urls.py  views.py
templates/: base.html  login.html
terms/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  (+1 more)
(+220 files in other folders)
