[project]
name = "richwell-portal-backend"
version = "0.1.0"
description = "Backend service for the Richwell Portal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
]

[project.optional-dependencies]
dev = [
    "psycopg2-binary>=2.9",
    "pytest>=7.4",
    "pytest-django>=4.5",
]

[tool.setuptools.packages.find]
include = ["config*", "healthz*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
